--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/szamon/szamon.github.io.git"
+    "url": "git+https://github.com/szamon/portfolio.git"
   },
   "keywords": [
-    "portfolio"
+    "portfolio",
+    "Szymon",
+    "Majewski"
   ],
   "author": "szamon",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/szamon/szamon.github.io/issues"
+    "url": "https://github.com/szamon/portfolio/issues"
   },
-  "homepage": "https://github.com/szamon/szamon.github.io#readme",
+  "homepage": " https://szamon.github.io/portfolio/",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
